RESOLVED FIXED51560
Incorrect layer property used noted as changed in GraphicsLayerCA::setAcceleratesDrawing
https://bugs.webkit.org/show_bug.cgi?id=51560
Summary Incorrect layer property used noted as changed in GraphicsLayerCA::setAcceler...
Matthew Delaney
Reported 2010-12-23 14:08:52 PST
In GraphicsLayerCA::setAcceleratesDrawing it has noteLayerPropertyChanged(DrawsContentChanged); but should be noteLayerPropertyChanged(AcceleratedDrawingchanged);
Attachments
Patch (1.22 KB, patch)
2010-12-23 14:10 PST, Matthew Delaney
simon.fraser: review+
Matthew Delaney
Comment 1 2010-12-23 14:10:46 PST
Matthew Delaney
Comment 2 2010-12-23 14:15:41 PST
WebKit Review Bot
Comment 3 2010-12-23 14:52:02 PST
http://trac.webkit.org/changeset/74579 might have broken GTK Linux 64-bit Debug The following tests are not passing: editing/selection/extend-by-character-004.html
Note You need to log in before you can comment on or make changes to this bug.