2010-12-23  Matthew Delaney  <mdelaney@apple.com>

Reviewed by Simon Fraser.

        Incorrect layer property used noted as changed in GraphicsLayerCA::setAcceleratesDrawing
        https://bugs.webkit.org/show_bug.cgi?id=51560

        No new tests.

        * platform/graphics/ca/GraphicsLayerCA.cpp:
        (WebCore::GraphicsLayerCA::setAcceleratesDrawing):


Canonical link: https://commits.webkit.org/64918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74579 268f45cc-cd09-0410-ab3c-d52691b4dbfc